--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,7 @@
 
 	* etc/poke.rec (Support bit-concatenation in l-value): Removed as
 	done.
+	(Union integrators and deintegrators): Likewise.
 
 2022-09-26  Jose E. Marchesi  <jemarch@gnu.org>
 
